[package]
name = "hello-piston"
version = "0.1.0"
authors = ["Mark Schifflin <rschifflin@hotmail.com>"]

[[bin]]
name = "hellopiston"

[dependencies]
piston = "0.28.0"
piston-float = "0.2.0"
piston2d-graphics = "0.20.0"
glium = "0.16.0"
piston2d-glium_graphics = "0.36.0"
conrod = {path = "conrod", features = ["glium"]}
specs = "0.7.1"
cpal = "0.4.2"
futures = "0.1.9"
bit-vec = "0.4.3"
