[package]
name = "hello-piston"
version = "0.1.0"
authors = ["Mark Schifflin <rschifflin@hotmail.com>"]

[[bin]]
name = "hellopiston"

[dependencies]
piston = "0.28.0"
piston-float = "0.2.0"
piston2d-graphics = "0.20.0"
glium = "0.16.0"
piston2d-glium_graphics = "0.36.0"
conrod = {path = "conrod", features = ["glium"]}
specs = "0.7.1"
cpal = {git = "https://github.com/rschifflin/cpal"}
futures = "0.1.9"
